# rd_pipe-rs

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  TESTING.md  TEST_COVERAGE_SUMMARY.md  create_arm64x.ps1  prek.toml  readme.md  rustfmt.toml
.cargo.soon/: config.toml
.config/: nextest.toml
.github/: FUNDING.yml  actionlint.yaml  dependabot.yml
.github/workflows/: ci.yml  dependabot-approve.yml  dependabot-auto-merge.yml  dependabot-setup.yml
arm64x/: build_merged.ps1  rd_pipe.def
core/: Cargo.toml
core/src/: class_factory.rs  dvc_plugin.rs  lib.rs  rd_pipe_plugin.rs
inproc/: Cargo.toml
inproc/src/: lib.rs
outproc/: Cargo.toml
outproc/src/: main.rs
rd_pipe/: Cargo.toml
rd_pipe/src/: class_factory.rs  lib.rs  rd_pipe_plugin.rs
reg_tool/: Cargo.toml
reg_tool/src/: main.rs
src/: class_factory.rs  dvc_plugin.rs  lib.rs  rd_pipe_plugin.rs  registry.rs  security_descriptor.rs
tests/: dll_smoke.rs  dvc_emulation.rs
tests/common/: mod.rs
