# RD Pipe: Windows Remote Desktop Services Dynamic Virtual Channel implementation using named pipes, written in Rust
# cargo.toml for the rd_pipe crate
# Copyright (C) 2022-2024 Leonard de Ruijter <alderuijter@gmail.com>
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <https:#www.gnu.org/licenses/>.

[package]
name = "rd_pipe"
description = "Windows Remote Desktop Services Dynamic Virtual Channel implementation using named pipes"
version = "0.5.0"
authors = ["Leonard de Ruijter <alderuijter@gmail.com>"]
readme = "../readme.md"
repository = "https://github.com/leonardder/rd_pipe-rs"
license = "AGPL-3.0-or-later"
categories = ["network-programming", "os::windows-apis"]
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"

[dependencies]
parking_lot = "0.12.4"
tracing = "0.1.41"
itertools = "0.14.0"
windows-core = "0.62.0"
windows-registry = "0.6.0"

[dependencies.tracing-appender]
version = "0.2.3"
features = [
    "parking_lot",
]

[dependencies.tracing-subscriber]
version = "0.3.20"
default-features = false
features = [
    "parking_lot",
    "tracing-log"
]

[dependencies.windows]
version = "0.62.0"
features = [
    "Win32_Foundation",
    "Win32_Security_Authorization",
    "Win32_System_SystemServices",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_RemoteDesktop",
    "Win32_System_Threading",
]

[dependencies.tokio]
version = "1.47"
features = [
    "rt-multi-thread",
    "net",
    "parking_lot",
    "io-util",
    "time"
]
