[package]
name = "rd_pipe-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"

[dependencies.tracing]
version = "0.1"
features = [
    "log",
]

[dependencies.windows]
git = "https://github.com/microsoft/windows-rs"
version = "0.39"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_RemoteDesktop",
]

[dependencies.tokio]
version = "1"
features = [
    "macros",
    "rt-multi-thread",
    "net",
    "io-util",
    "sync",
]
