[package]
name = "rd_pipe-inproc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
rd_pipe-core = { path = "../core" }
lazy_static = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"

[dependencies.windows]
version = "0.39"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
]

[dependencies.tokio]
version = "1"
features = [
    "rt",
    "rt-multi-thread",
]
