[package]
name = "dvc_outproc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.1"
dvc_core = { path = "../core" }

[dependencies.windows]
version = "0.39.0"
features = [
    "Win32_System_Com",
]
