[package]
name = "rd_pipe-outproc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
winit = "0.27"
rd_pipe-core = { path = "../core" }

[dependencies.windows]
version = "0.39"
git = "https://github.com/microsoft/windows-rs"
features = [
    "Win32_System_Com",
]
